--- a/client/src/components/puzzle.css
+++ b/client/src/components/puzzle.css
@@ -15,7 +15,7 @@
 	width: 100%;
    	float: left;
    	position: relative;
-   	overflow: hidden;   
+   /*	overflow: hidden;   */
 }
 
 .piecesContainer{
