--- a/client/src/components/library.css
+++ b/client/src/components/library.css
@@ -4,3 +4,34 @@
 	margin: 10px;
 }
 
+.optionsDiv{
+	width: 80%;
+	margin:0 auto;
+}
+
+.optionLabel{
+	/*border: 1px solid black;*/
+	height: 45px;
+	width: 32%;
+	display:inline-block;
+	font-size: 22px;
+	text-align: center;
+	background-color: white;
+}
+
+.levelsFieldset{
+	width:100%;
+	padding:10px;
+	margin:0;
+}
+
+.levelsFieldset input{
+	margin-right: 10px;
+}
+
+/* radio buttons */
+
+
+
+
+
