--- a/client/src/components/puzzlePiece.css
+++ b/client/src/components/puzzlePiece.css
@@ -1,11 +1,11 @@
 .pieceStyle{
-	position:absolute;	
+	/*position:absolute;	*/
 	height: 120px;
 	width: 120px;
 	background-color: green;
 	color:white;
 	font-size: 22px;
-	top: 20px;
-	left: 30px;
+	/*top: 20px;
+	left: 30px;  */
 	border:1px solid white;	
 }
