--- a/client/src/components/testPuzzle.css
+++ b/client/src/components/testPuzzle.css
@@ -1,16 +1,14 @@
 .ImageDiv{	
-	/*height: 550px;
-	width: 550px;	*/
-	margin:50px 50px 0 auto; 
-	position: relative;
-	display:inline-block;	
+	height: 550px;
+	width: 550px;	
+	margin:50px auto 0 auto;
+	position: relative;  
 }
 
 .imageCls{
-	/*width: 100%;
-	height:100%;*/
-	position:realtive;
-	/*opacity:0.5;*/
+	width: 100%;
+	height:100%;
+	opacity:0.5;
 }
 
 .wrapperDiv{
@@ -18,30 +16,23 @@
    	float: left;
  /*  	position: relative;
    	overflow: hidden;   */
-   	text-align:center;
 }
 
 .piecesContainer{
-	width: 80%;
-  /* 	float: left;*/
-   	height: auto;
-  
-  border: .5px solid grey;
-  overflow-y:auto;
-  
-  margin:20px auto 0 auto;
+	width: 100%;
+   	float: left;
+  /* 	position:absolute;  */ 	
 }
 
 .pieceStyle{
-	
+	position:absolute;	
 	height: 120px;
 	width: 120px;
 	background-color: green;
 	color:white;
 	font-size: 22px;
-/*	top: 20px;*/
-/*	left: 30px;  */
-	display:inline-block;
+	top: 20px;
+	left: 30px;
 	border:1px solid white;	
 }
 
@@ -60,18 +51,17 @@
 #slotsSpan{
 	position:absolute;
 	display:inline-block;
-	height: auto;
-	width: auto;
+	height: 550px;
+	width: 550px;
 	border:.01px solid red;
 	left:0;
 	top:0;
 }
 
 .slotClass{
-	background-color: white;
+	background-color: transparent;
 	border:1px solid blue;
 	display:inline-block;
 	position:absolute;
-	opacity:0.5;
-	filter: alpha(opacity=50)
 }
+
