--- a/client/src/components/puzzle.css
+++ b/client/src/components/puzzle.css
@@ -1,7 +1,7 @@
 .ImageDiv{	
 	/*height: 550px;
 	width: 550px;	*/
-	margin:50px 50px 0 auto; 
+	margin:50px auto 0 auto; 
 	position: relative;
 	display:inline-block;	
 }
@@ -19,6 +19,7 @@
  /*  	position: relative;
    	overflow: hidden;   */
    	text-align:center;
+   	background-color: #edecaa;
 }
 
 .piecesContainer{
