--- a/client/src/components/dashboard.css
+++ b/client/src/components/dashboard.css
@@ -1,9 +1,14 @@
+.dashboardCls{
+	width:100%;
+	height:94vh;
+}
 .contentDiv{
-	/*width: 100%; */
-	border: 1px solid white;
+	width: 80%; 	
 	display: block;
 	height: 90vh;
 	text-align: center;
+	margin:0 auto;
+	background-color: rgba(255,255,255,0.7);
 }
 
 h1{
@@ -12,10 +17,10 @@ h1{
 }
 
 .listHeaders, .puzzlesDiv{
-	background-color:grey;
+	background-color:#FFED3D;
 	border:1px solid white;
-	color:white;
-	width: 51%;	
+	color:blue;
+	width: 71%;	
 	margin:0 auto;
 }
 
@@ -29,6 +34,7 @@ h1{
 	border-right: 1px solid white;
 	line-height: 50px;
 	vertical-align: middle;
+	text-align: center;
 }
 
 .puzzlesDiv{
@@ -37,3 +43,67 @@ h1{
 	overflow-x: hidden;
 	height: 70%;	
 }
+
+#closeBtn{
+	height:45px;
+	width: 200px;
+	font-size: 20px;
+	font-weight: bold;
+	background-color: blue;
+	color:white;
+	border-radius: 15px;
+}
+
+.buttonDiv{
+	margin:15px;
+}
+
+/* ipad pro  */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)  { 
+	.contentDiv{
+		width: 100%; 			
+	}
+
+	.listHeaders, .puzzlesDiv{		
+		width: 91%;			
+	}
+
+	.listHeaders>div {		
+		font-size: 18px;
+		width: 24%;		
+	}
+
+	.buttonDiv{
+		margin:25px;
+	}
+}
+
+@media only screen and (max-device-width: 480px), 
+	   only screen and (min-device-width: 560px)	   
+	   and (-webkit-min-device-pixel-ratio: 2) {
+
+	   	.contentDiv{
+			width: 100%;
+			height: 83vh; 			
+		}
+
+		.listHeaders, .puzzlesDiv{		
+			width: 91%;			
+		}
+
+		.listHeaders>div {		
+			font-size: 12px;
+			width: 24%;		
+		}
+
+		.buttonDiv{
+			margin:8px;			
+		}
+
+		.#closeBtn{
+			font-size: 8px;
+		}
+
+}  
