--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -1,13 +1,16 @@
 .homeCls{
 	height: 94vh;
 	width:100%;
-	/*display:grid;
+	display:grid;
 	align-items: center;
-	justify-content: center; */
+	justify-content: center; 	 		
 }
 
 .bannerCls{
-	font-size: 68px;	
-	margin:0;
+	font-size: 68px;		
 	padding:0;
+	margin:0 auto;
+	color: Red;
+	font-style: italic;
+	background-color: white;
 }
