--- a/client/src/components/login.css
+++ b/client/src/components/login.css
@@ -1,11 +1,12 @@
 .loginForm{
 	color: black;
 	font-size: 20px;
-	background-color: #a4adb2;
+	background-color: rgba(255,255,255,0.7);
 	border-radius: 10px;
-	width: 350px;
+	width: 320px;
 	height: 300px;	
-	padding: 35px 15px 35px 15px;	
+	padding: 35px 15px 35px 15px;
+	border: 1px solid blue;	
 }
 
 fieldset{
@@ -50,3 +51,13 @@ label{
 	width:auto;
 	padding-left:15px;
 }
+
+@media only screen and (max-device-width: 480px), 
+	   only screen and (min-device-width: 560px)	   
+	   and (-webkit-min-device-pixel-ratio: 2) {
+
+	.loginForm{
+		width: 288px;
+	}
+}
+
