--- a/client/src/components/puzzle.css
+++ b/client/src/components/puzzle.css
@@ -1,7 +1,7 @@
 .ImageDiv{	
 	/*height: 550px;
 	width: 550px;	*/
-	margin:50px auto 0 auto; 
+	margin:40px auto 15px auto; 
 	position: relative;
 	display:inline-block;	
 }
@@ -9,7 +9,7 @@
 .imageCls{
 	/*width: 100%;
 	height:100%;*/
-	position:realtive;
+	position:relative;
 	/*opacity:0.5;*/
 }
 
@@ -19,18 +19,18 @@
  /*  	position: relative;
    	overflow: hidden;   */
    	text-align:center;
-   	background-color: #edecaa;
+   	background-color: #edecaa;   	
 }
 
 .piecesContainer{
-	width: 80%;
-  /* 	float: left;*/
+	width: 70%; 
    	height: auto;
   
   border: .5px solid grey;
-  overflow-y:auto;
+  overflow-x:auto;
+  white-space: nowrap;
   
-  margin:20px auto 0 auto;
+  margin:30px auto 30px auto;
 }
 
 .pieceStyle{
@@ -46,16 +46,21 @@
 	border:1px solid white;	
 }
 
-.buttonCls{
+.buttonCls{	
 	height: 50px;
 	width: 120px;
 	display:block;	
 	margin: 120px auto 0 auto;
+	background-color: blue;
+	color:white;
+	font-size: 20px;
+	font-weight: bold;
+	border-radius: 15px;
 }
 .outerDiv{
 	/*position:relative;*/
 	height:94vh;
-	background-color: white;
+	background-color: #edecaa;
 }
 
 #slotsSpan{
@@ -75,4 +80,78 @@
 	position:absolute;
 	opacity:0.5;
 	filter: alpha(opacity=50)
+}
+
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 3) {
+
+	   	
+		.ImageDiv{	
+			height: 300px;
+			width: 300px;	
+			margin:40px auto 15px auto; 
+			position: relative;
+			display:inline-block;	
+		}	
+		
+
+		#puzzleImage{
+			width:100%;
+			height:100%; 
+		}
+
+		.wrapperDiv{
+			/*background-color: blue;*/
+			
+			width:100%;
+			height:100vh;
+		}
+		.outerDiv{
+		/*	border:3px solid black;*/
+			width:100%;
+			overflow:auto;
+			height:98vh;
+		/*	background-color: blue;*/
+		}
+
+		#slotsSpan{
+			height: 300px;
+			width: 300px;	
+		}
+
+		.pieceStyle{
+	
+			height: 120px;
+			width: 120px;
+			background-color: green;
+			color:white;
+			font-size: 22px;
+		/*	top: 20px;*/
+		/*	left: 30px;  */
+			display:inline-block;
+			border:1px solid white;	
+		}
+
+}
+
+@media only screen and (max-device-width: 480px), 
+	   only screen and (min-device-width: 560px)	   
+	   and (-webkit-min-device-pixel-ratio: 2) {
+
+	.wrapperDiv{
+		width: 100%;
+	   	float: left;
+	 /*  	position: relative;
+	   	overflow: hidden;   */
+	   	text-align:center;
+	   	background-color: #edecaa;   	
+	}
+
+	.outerDiv{
+		/*position:relative;*/
+		height:98vh;
+		/*background-color: blue; */
+	}
 }
