--- a/client/src/components/puzzle.css
+++ b/client/src/components/puzzle.css
@@ -81,7 +81,7 @@
 	opacity:0.5;
 	filter: alpha(opacity=50)
 }
-
+/* galaxy S5 */
 @media screen 
   and (device-width: 360px) 
   and (device-height: 640px) 
@@ -118,13 +118,14 @@
 
 		#slotsSpan{
 			height: 300px;
-			width: 300px;	
+			width: 300px;
+			overflow: hidden;	
 		}
 
 		.pieceStyle{
 	
-			height: 120px;
-			width: 120px;
+			height: 80px;
+			width: 80px;
 			background-color: green;
 			color:white;
 			font-size: 22px;
@@ -133,9 +134,36 @@
 			display:inline-block;
 			border:1px solid white;	
 		}
+		.piecesContainer{
+			height: 160px;
+		}
 
 }
+/* iphone x */
+@media only screen 
+    and (device-width : 375px) 
+    and (device-height : 812px) 
+    and (-webkit-device-pixel-ratio : 3) {
 
+    	.ImageDiv{	
+			height: 300px;
+			width: 300px;				
+		}
+		#puzzleImage{
+			width:100%;
+			height:100%; 
+		}
+
+		#slotsSpan{
+			height: 300px;
+			width: 300px;
+			overflow:hidden;	
+		}
+
+
+     }
+
+/* ipad */
 @media only screen and (max-device-width: 480px), 
 	   only screen and (min-device-width: 560px)	   
 	   and (-webkit-min-device-pixel-ratio: 2) {
@@ -153,5 +181,22 @@
 		/*position:relative;*/
 		height:98vh;
 		/*background-color: blue; */
-	}
+	}	
+}
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+	.ImageDiv{	
+			height: 300px;
+			width: 300px;				
+		}
+		#puzzleImage{
+			width:100%;
+			height:100%; 
+		}
+
+		#slotsSpan{
+			height: 300px;
+			width: 300px;
+			overflow:hidden;	
+		}
 }
